--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
 /*Navbar*/
+
+
 .navbar-nav a{
   font-size: 18px;
+  overflow: hidden;
 }
 
+.crad{
+  padding-left: 25%;
+}
+.crads{
+  padding-left: 10%;
+  padding-top: 3%;
+}
 .cardContainer{
   width:100%;
   display: grid;
@@ -39,4 +49,63 @@
 }
 .pd-0{
   padding-top: 5%;
+}
+.abou{
+  padding-top: 2%;
+  padding-left: 2%;
+  overflow: hidden;
+}
+
+/*Login*/
+
+.App {
+  background-color: white;
+}
+
+.Auth-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70%;
+  overflow: hidden;
+}
+
+.Auth-form {
+  width: 420px;
+  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 8px;
+  background-color: white;
+}
+
+.Auth-form-content {
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+.Auth-form-title {
+  text-align: center;
+  margin-bottom: 1em;
+  font-size: 24px;
+  color: rgb(34, 34, 34);
+  font-weight: 800;
+}
+
+label {
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(34, 34, 34);
+}
+
+.abo{
+  padding-top: 5%;
+  padding-left: 2%;
+}
+
+.half{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
